// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Divider variants: labeled 1`] = `
<ForwardRef(Divider)>
  <Styled(Flex)>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-fjdhpX",
            "isStatic": false,
            "lastClassName": "kqzdTp",
            "rules": Array [
              "display:",
              [Function],
              ";align-items:center;",
              [Function],
              " ",
              [Function],
              "
  margin: ",
              [Function],
              "px 0;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  color: #8da2b5;
  white-space: nowrap;

  &::before,
  &::after {
    ",
              "
  width: 100%;
  border-top: 1px solid #eaeff4;
  margin: ",
              [Function],
              "px 0;
",
              "

    display: block;
    content: '';
  }

  &::before {
    margin-right: ",
              [Function],
              "px;
  }

  &::after {
    margin-left: ",
              [Function],
              "px;
  }
",
            ],
          },
          "displayName": "Styled(Flex)",
          "foldedComponentIds": Array [
            "Flex-sc-127y44r-0",
          ],
          "render": [Function],
          "styledComponentId": "sc-fjdhpX",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="Flex-sc-127y44r-0 sc-fjdhpX kqzdTp"
      >
        Button
      </div>
    </StyledComponent>
  </Styled(Flex)>
</ForwardRef(Divider)>
`;

exports[`Storyshots Divider variants: normal 1`] = `
<ForwardRef(Divider)>
  <styled.hr>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-jTzLTM",
            "isStatic": false,
            "lastClassName": "ddOgbe",
            "rules": Array [
              "
  ",
              "
  width: 100%;
  border-top: 1px solid #eaeff4;
  margin: ",
              [Function],
              "px 0;
",
              "
",
            ],
          },
          "displayName": "styled.hr",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-jTzLTM",
          "target": "hr",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <hr
        className="sc-jTzLTM ddOgbe"
      />
    </StyledComponent>
  </styled.hr>
</ForwardRef(Divider)>
`;
